--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div id="app">
-
+            <!-- immagine che appare a sinistra col testo -->
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
 
@@ -27,30 +27,18 @@
                         </p>
                     </div>
                 </div>
-
+                 <!-- colonna destra -->
                 <div class="thumbs">
                     <div @click="prevImage" class="prev"></div>
                     <div @click="nextImage" class="next"></div>
                     <div class="thumb active">
-                        <img src="img/01.jpg" alt="Svezia" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.jpg" alt="Svizzera" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.jpg" alt="Gran Bretagna" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.jpg" alt="Germania" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.jpg" alt="Paradise" />
+                        <div v-for="(image, slideScrolled) in slides" class="thumb" :class="setClass(slideScrolled)" @click="setIndex(slideScrolled)">
+                            <img :src="slides[slideScrolled].image" alt="slides[slideScrolled].title">
+                        </div>
                     </div>
                 </div>
-
             </div>
         </div>
-
     </div>
 
     <script src="js/script.js"></script>
